[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pahdegradation"
version = "0.1.0"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
]
requires-python = ">=3.8"
authors = [
  {name = "Maily Nguyen", email = "maily_nguyen@berkeley.edu"},
  {name = "Max Tretikov", email = "mtretikov@berkeley.edu"},
]